[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.2"
tokio = { version = "1.25", features = ["rt-multi-thread", "macros", "io-util", "io-std", "fs"] }
async-trait = "0.1.64"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
mockall = "0.11"